@@ -444,6 +444,7 @@ Version 2.7      2012-nn-nn
 - rfc2217: zero polls value (baudrate, data size, stop bits, parity) (Erik
   Lundh)
 - Posix: [Patch pyserial:28] Accept any speed on Linux
+- Posix: [Patch pyserial:29] PosixSerial.read() should "ignore" errno.EINTR
 
 Bugfixes:
 
@@ -468,6 +469,6 @@ Bugfixes (win32):
 - [Bug 3550043] on Window in tools global name 'GetLastError' is not defined
 - [Bug pyserial:146] flush() does nothing in windows (despite docs)
 - [Bug pyserial:144] com0com ports ignored due to missing "friendly name"
-- [Bug pyserial:152] Cannot configure port, some setting was wrong. can leave
+- [Bug pyserial:152] Cannot configure port, some setting was wrong. Can leave
   port handle open but port not accessible
 
